--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
+    "bulma": "^0.9.1",
     "html5-boilerplate": "0.0.1"
   },
   "devDependencies": {
